--- a/jogo.html
+++ b/jogo.html
@@ -9,7 +9,7 @@
     <title>¡Pegue os Kaios!</title>
 </head>
 <body>
-<h1>¡Pegue o Kaios!</h1>
+<h1>¡Pegue os Kaios!</h1>
 <button id="startButton" class="botao-90s" onclick="iniciaJogoComMusica()" >Iniciar Jogo</button>
 
   <div id="tela" style="margin-top: 10px;"></div>
